Fixed SWAL overflow issue + removed Dashboard tab for cleaner interface

--- a/core/resources/assets/sass/_sweet-alert2.scss
+++ b/core/resources/assets/sass/_sweet-alert2.scss
@@ -29,7 +29,7 @@ $swal2-validationerror-color:      $swal2-white !default;
 
 body {
   &.swal2-shown {
-    overflow-y: hidden;
+    /*overflow-y: hidden;*/
   }
 
   &.swal2-iosfix {
